fix - vertical spacing on skills graph

--- a/client/css/src/2-app/resume/skill/skills.scss
+++ b/client/css/src/2-app/resume/skill/skills.scss
@@ -11,7 +11,7 @@ $skills-graph-height : ($num-skills)*$skill-margin-bottom + ($num-skills*$skill-
 
 .skill-graph {
   position: relative;
-  margin: $font-size-base * 2.5 0px;
+  margin: $font-size-base * 3 0px;
   width: 100%;
 }
 
